2.0.0
  - The tagfilter extension for markdown_html now actually works (#15)

1.9.5
  - Fix parallel make problem

1.9.4
  - Apply upstream PR https://github.com/github/cmark-gfm/pull/362
  - Require double-tilde `~~` for the strikethrough extension, for consistency with Pandoc's Markdown

1.9.1
  - Update libcmark-gfm to 0.29.0.gfm.13

1.9.0
 - Add parameter 'footnotes' to enable footnote parsing
 - Update libcmark-gfm to 0.29.0.gfm.9

1.8.1
 - Update libcmark-gfm to 0.29.0.gfm.6
 - Fix strict-prototypes warnings

1.8.0
 - Update libcmark-gfm to 0.29.0.gfm.3

1.7
 - Update libcmark-gfm to 0.28.3.gfm.19
 - Hide internal symbols, fixes crash on rstudio in centos (#12)

1.6
 - Update libcmark-gfm to 0.28.3.gfm.16

1.5
 - Update libcmark-gfm to 0.28.3.gfm.12

1.4
 - Update libcmark-gfm to 0.28.0.gfm.8
 - Add new output markdown_text()
 - Hide symbols from dll on supported platforms

1.2
 - Update upstream libcmark (github/cmark@14874d3)
 - Add R_init_commonmark to please CMD check

1.1
 - Update upstream libcmark (github/cmark@57ca6e2)

1.0
 - Switch to Github fork of cmark library (master@0e197aa)
 - Add bindings for enabling extensions
 - Switch to roxygen2 markdown format for manual pages

0.9
 - Update libcmark to 0.26.1

0.8
 - Update libcmark to 0.25.2

0.7
 - Update libcmark to 0.24.1

0.6
 - Update libcmark to 0.23

0.5
 - Update libcmark to 0.22
 - Added markdown_latex() function